--- a/themes/futura/assets/css/main.css
+++ b/themes/futura/assets/css/main.css
@@ -1,9 +1,192 @@
+/*------------------- General --------------------*/
+
+body,
 html {
-    font-family: sans-serif;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+    color: #4a5665;
 }
 
-body {
+
+/*--------------- Side Navigation ----------------*/
+
+#fp-nav ul {
+    left: 50px;
+    top: 60% !important;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin: 0 !important;
+    z-index: 50;
+    transition: opacity .5s;
+    position: fixed;
+    z-index: 999;
+    opacity: 1;
+    background: none;
+    display: block;
+    list-style: none;
+    padding: 12px 0;
+    border: 2px solid #f66367;
+    border-radius: 16px;
+    transition: border .5s;
+}
+
+#fp-nav ul li {
+    display: block;
     margin: 0;
+    padding: 0;
+    width: auto;
+    height: auto;
+}
+
+#fp-nav ul li a {
+    display: block;
+    position: relative;
+    width: 28px;
+    height: 20px;
+}
+
+#fp-nav ul li a span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 8px;
+    height: 8px;
+    background: #f66367;
+    border: 2px solid transparent;
+    border-radius: 100%;
+    -webkit-transition: border .2s, background .2s;
+    transition: border .2s, background .2s;
+    margin: 0 !important;
+}
+
+#fp-nav ul li a.active span {
+    background: transparent;
+    border-color: #f66367;
+    -webkit-animation: .4s 1 pagePlop;
+    animation: .4s 1 pagePlop;
+    margin: 0 !important;
+}
+
+#layout-header {
+    background-color: transparent;
+    height: 150px;
+}
+
+.navbar {
+    padding: .5rem 0;
+}
+
+.navbar-toggler {
+    cursor: pointer;
+}
+
+.navbar-toggler-icon {
+    width: 2.5em;
+    height: 2.5em;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar .nav-item,
+.navbar .nav-item a {
+    color: #FFF;
+}
+
+.navbar .nav-item:hover,
+.navbar .nav-item a:hover {
+    color: #f66367;
+}
+
+.navbar-brand {
+    padding: 10px 0 0 50px;
+}
+
+.navbar-collapse {
+    font: 700 18px'Ubuntu', sans-serif;
+    text-transform: uppercase;
+}
+
+.navbar-collapse .active {
+    position: relative;
+}
+
+.navbar-collapse .active a::after {
+    content: "";
+    background: #fff;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -12px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    height: 9px;
+    width: 9px;
+}
+
+.navbar-collapse.show .active a::after {
+    height: 0;
+    width: 0;
+}
+
+
+/*---------------------- 404 ---------------------*/
+
+#error404 .row {
+    min-height: 38.5rem;
+    font: 300 1rem/1.3 'Ubuntu', serif;
+}
+
+#error404 .col-4:first-of-type {
+    padding-right: 6%;
+}
+
+#error404 h3 {
+    font: 700 1.625rem/1.3 'Vollkorn', serif;
+    margin-bottom: 2rem;
+}
+
+#error404 b {
+    font-weight: 700;
+}
+
+
+/*---------------------- Head --------------------*/
+
+.head {
+    background-image: url(../images/head.png);
+    background-size: cover;
+    background-position: 0 30%;
+}
+
+
+/*--------------------- Footer --------------------*/
+
+.footer {
+    padding: 40px 0 30px 0;
+    font: 500 18px/1 'Ubuntu', serif;
+    background-color: #F3F6FF !important;
+}
+
+.footer hr {
+    margin: 74px 0 35px 0;
+}
+
+.footer .align-text-bottom {
+    padding-top: 90px;
+}
+
+.footer .copyright {
+    font: 700 13px/1 'Ubuntu', serif;
+}
+
+@media only screen and (max-width: 992px) {
+    .footer .align-text-bottom {
+        padding-top: 15px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #fp-nav {
+        display: none;
+    }
 }
