--- a/themes/futura/layouts/default.htm
+++ b/themes/futura/layouts/default.htm
@@ -74,6 +74,7 @@ function onStart()
       'assets/vendor/bootstrap/dist/css/bootstrap.min.css',
       'assets/vendor/animate.css/animate.min.css',
 	  'assets/vendor/fullpage/dist/jquery.fullpage.min.css',
+	  'assets/css/bootstrap-spacing-extended.css',
 	  'assets/css/main.css'
     ]|theme }}" rel="stylesheet"> {% styles %}
 
