--- a/themes/futura/assets/css/main.css
+++ b/themes/futura/assets/css/main.css
@@ -35,6 +35,69 @@ html {
     font: 300 22px/1.3 'Ubuntu', sans-serif;
 }
 
+.form-group.required label:before {
+    content: "*  ";
+    color: red;
+}
+
+
+/*--------------- Custom Radio ----------------*/
+
+[type="radio"]:checked,
+[type="radio"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+
+[type="radio"]:checked+label,
+[type="radio"]:not(:checked)+label {
+    position: relative;
+    padding-left: 28px;
+    cursor: pointer;
+    line-height: 20px;
+    display: inline-block;
+    color: #666;
+}
+
+[type="radio"]:checked+label:before,
+[type="radio"]:not(:checked)+label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #ddd;
+    border-radius: 100%;
+    background: #fff;
+}
+
+[type="radio"]:checked+label:after,
+[type="radio"]:not(:checked)+label:after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    background: #fa3e45;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    border-radius: 100%;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+[type="radio"]:not(:checked)+label:after {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+
+[type="radio"]:checked+label:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
 
 /*--------------- Side Navigation ----------------*/
 
@@ -102,6 +165,19 @@ html {
     height: 150px;
 }
 
+#layout-header.header-pages {
+    background-color: #f66367;
+}
+
+#layout-header.header-pages .navbar-nav {
+    background-color: #f66367;
+}
+
+#layout-header.header-pages .navbar .nav-item:hover,
+#layout-header.header-pages .navbar .nav-item a:hover {
+    color: #ff9fa2;
+}
+
 .navbar {
     padding: .5rem 0;
 }
@@ -111,8 +187,8 @@ html {
 }
 
 .navbar-toggler-icon {
-    width: 2.5em;
-    height: 2.5em;
+    width: 2em;
+    height: 2em;
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
@@ -159,27 +235,6 @@ html {
 }
 
 
-/*---------------------- 404 ---------------------*/
-
-#error404 .row {
-    min-height: 38.5rem;
-    font: 300 1rem/1.3 'Ubuntu', serif;
-}
-
-#error404 .col-4:first-of-type {
-    padding-right: 6%;
-}
-
-#error404 h3 {
-    font: 700 1.625rem/1.3 'Vollkorn', serif;
-    margin-bottom: 2rem;
-}
-
-#error404 b {
-    font-weight: 700;
-}
-
-
 /*---------------------- Head --------------------*/
 
 .head {
@@ -208,7 +263,7 @@ html {
 }
 
 .work figure img {
-    max-height: 8rem;
+    max-height: 6rem;
 }
 
 .work figure figcaption {
@@ -227,11 +282,19 @@ html {
     color: #717881;
 }
 
+.capacity img {
+    max-height: 230px;
+}
+
 
 /*---------------------- Goals --------------------*/
 
 .goal h5 {
     font: 500 30px/1.3 'Ubuntu', serif;
+}
+
+.goal img {
+    max-height: 230px;
 }
 
 
@@ -246,6 +309,12 @@ html {
     font: 700 13px/1 'Ubuntu', serif;
 }
 
+@media only screen and (max-width: 1200px) {
+    .navbar-collapse {
+        margin-left: -100px;
+    }
+}
+
 @media only screen and (max-width: 992px) {
     #fp-nav {
         display: none;
@@ -255,5 +324,11 @@ html {
 @media only screen and (max-width: 768px) {
     .navbar-collapse {
         margin-left: 0;
+    }
+    .head {
+        font: 700 16px/1.2 'Ubuntu', serif;
+    }
+    .head h1 {
+        font: 700 30px/1.1 'Ubuntu', serif;
     }
 }
