add feedback form

--- a/plugins/levabd/mailtemplates/views/mail/order.htm
+++ b/plugins/levabd/mailtemplates/views/mail/order.htm
@@ -1432,7 +1432,7 @@ layout = "system"
       <table>
         <tr>
           <th>
-                  <h5>Дата</h5>
+                  <h5>Дата та час</h5>
                   <p>{{ ukdate }}</p>
                   <br>
                   <!--h5>Order</h5>
